<resources>
    <!-- APPLICATION -->
    <string name="app_name">DatesDB</string>
    <string name="app_btn_ok">OK</string>
    <string name="app_btn_cancel">Cancel</string>

    <!-- ADD DATE SCREEN -->
    <string name="add_date_text_label">New Date</string>
    <string name="add_date_text_without_year">Without year</string>
    <string name="add_date_hint_name">Name</string>
    <string name="add_date_hint_type">Type of date</string>
    <string name="add_date_hint_date">Date</string>

    <string name="def_type_birthday">Birthday</string>
    <string name="def_type_holiday">Holiday</string>
    <string name="def_type_anniversary">Anniversary</string>

    <string name="text_list_item_name">Family Name Patronymic</string>
    <string name="text_list_item_date">%s (%d)</string>
    <string name="text_list_item_days_left">%d\nleft</string>

    <string name="text_list_empty_dates">Empty list of dates</string>

    <string name="text_item_name">Family Name Patronymic</string>
    <string name="text_item_age">%d years</string>
    <string name="text_item_days_left">Days left\n%d</string>

    <string name="text_edit_avatar">Change image</string>
    <string name="text_edit_name">Name</string>
    <string name="text_edit_date">Choose date</string>
    <string name="text_edit_is_year">Without year</string>
    <string name="text_edit_type">Type of date</string>

    <string name="text_add_add">Add</string>
    <string name="text_add_cancel">Cancel</string>
    <string name="text_add_name">Name</string>
    <string name="text_add_date">Choose date</string>
    <string name="text_add_is_year">Without year</string>
    <string name="text_add_type">Type of date</string>

    <string name="menu_settings">Settings</string>

    <string name="text_add_avatar">Set image</string>
    <string name="text_change_avatar">Change image</string>

    <string name="text_dialog_new_type_title">Creating new type</string>
    <string name="text_dialog_new_type">New type</string>
    <string name="text_dialog_add">Add</string>
    <string name="text_dialog_cancel">Cancel</string>
    <string name="text_add_type_title">Creating new type</string>


    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
</resources>